# Trading-Hackathon

./: .~c9_invoke_vDWbz.py  README.md  manual.ipynb
.c9/: out_of_memory
.c9/metadata/: tab14  tab24  tab4  tab8
.c9/metadata/environment/: ExchangeSingleton.py
.c9/metadata/environment/Bot_1/: Trader.py  constants.py  main3.py  utils.py  (+1 more)
.ipynb_checkpoints/: README-checkpoint.md  utils-checkpoint.py
Bot_1/: Trader.py  main3.py  settings.py  utils3.py
Bot_1/.ipynb_checkpoints/: ExchangeSingleton-checkpoint.py  constants-checkpoint.py
TraderBot/: Calculator.py  main.py
TraderBot1/: Calculator.py
environment/: README.md
environment/.c9/: project.settings  tasks.json
environment/.c9/amazonwebservices.aws-toolkit-vscode/: telemetryCache
environment/Bot_1/: del_orderbook.py
environment/Bot_1/.ipynb_checkpoints/: main-checkpoint.py
environment/TraderBot/: OrderHandler.py  Trader.py
environment/TraderBot1/: Trader.py
environment/optibook_client/: exchange_client.py  synchronous_client.py  type_checking.py
environment/optibook_client/idl/: exec.capnp
environment/pairs_trading_strat/: simple_pairs_trading.py
environment/pairs_trading_strat/.ipynb_checkpoints/: Historical_data-checkpoint.ipynb
optibook_client/: __init__.py  base_client.py  common_types.py  synchronous_wrapper.py
optibook_client/idl/: CMakeLists.txt  common.capnp  info.capnp  management.capnp
pairs_trading_strat/: Dual_listing_strat.ipynb  Historical_data.ipynb  pairs_trading_testing.ipynb
pairs_trading_strat/.ipynb_checkpoints/: Dual_listing_strat-checkpoint.ipynb
(+19 files in other folders)
